<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/edtMetros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipOpciones"
        android:layout_width="122dp"
        android:layout_height="223dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23">

        <com.google.android.material.chip.Chip
            android:id="@+id/chPies"
            style="@style/chipSel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pies"
            app:chipIcon="@drawable/baseline_arrow_forward_24" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chPulgadas"
            style="@style/chipSel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pulgadas"
            app:chipIcon="@drawable/baseline_arrow_forward_24" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chYardas"
            style="@style/chipSel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yardas"
            app:chipIcon="@drawable/baseline_arrow_forward_24" />
    </com.google.android.material.chip.ChipGroup>

    <ImageButton
        android:id="@+id/ibtnConvertir"
        android:layout_width="85dp"
        android:layout_height="80dp"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.579"
        app:srcCompat="@drawable/baseline_calculate_24" />

    <ImageButton
        android:id="@+id/ibtnLimpiar"
        android:layout_width="80dp"
        android:layout_height="78dp"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.581"
        app:srcCompat="@drawable/baseline_backspace_24" />

    <ImageButton
        android:id="@+id/ibtnMostrar"
        android:layout_width="87dp"
        android:layout_height="80dp"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.579"
        app:srcCompat="@drawable/baseline_local_see_24" />

    <TextView
        android:id="@+id/idResultado"
        android:layout_width="315dp"
        android:layout_height="130dp"
        android:text="@string/resultado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.896" />

</androidx.constraintlayout.widget.ConstraintLayout>